# advent_of_code_2025

./: .gitignore  Cargo.toml  flake.nix
src/: aoc_result.rs  grid.rs  input.rs  main.rs
src/aoc2025/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  mod.rs
