[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
ex = "0.1.3"
http_req = { version = "0.14", features = ["rustls", "rust-tls"], default-features = false }
regex = "1.11"
z3 = "0.19"
